Agregué texto y borre imagenes al html

--- a/index.html
+++ b/index.html
@@ -2,18 +2,15 @@
 <html>
 <head>
 	<title>Claribel Buendia </title>
-	<link rel="stylesheet" href="clase2.css">
-	<link rel="stylesheet" href="<link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="clase31.css">
 </head>
 <body>
 	
 
-<p>svsgfjkjafhñ jhahñj dpohjd hjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsjsvsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghk</p>
-
-		
-<div class="abreviado">esto es una prueba</div>
+	<h1>AGREGUÉ UN TITULO</h1>
 
 
+<div>DESAFIO 1 svsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsj </div>
 
 </body>
 <footer>
