agrego mi nuevo index

--- a/index.html
+++ b/index.html
@@ -1,21 +1,226 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>Claribel Buendia </title>
-	<link rel="stylesheet" href="clase31.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title> Coas Propiedades - Inmobiliaria </title>
+	<meta name="description"
+  	 content="Alquiler, compra y venta de propiedades. Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario">
+   	<meta name="keywords"
+   	content="PROPIEDADES, VENTA, ALQUILER, TASACIONES, INMOBILIARIA, COAS, BOEDO, CABALLITO, FLORES">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
+	<div class="container-fluid">
+	<header>
+		<div class="row">
+			<div class="col-12">
+				<nav class="navbar navbar-expand-lg navbar-light bg-light">
+				  <a class="navbar-brand" href="index.html"><img src="img/coas.png" alt="logo"></a>
+				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+				    <span class="navbar-toggler-icon"></span>
+				  </button>
+
+				  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+				    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+				      <li class="nav-item">
+				        <a class="nav-link" href="index.html">INICIO</a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="propiedades.html">PROPIEDADES</a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="servicios.html">SERVICIOS</a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="nosotros.html">NOSOTROS</a>
+				      </li>
+				      <li class="nav-item">
+				        <a class="nav-link" href="contacto.html">CONTACTO</a>
+				      </li>
+				    </ul>
+				    <nav>
+					<ul class="redessocialesMenu">
+					<li>
+					<a class="redes" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+					<img src="img/fb2.png" alt="pagina de fb" width="40px" height="40px"></a>
+					</li>
+					<li>
+					<a class="redes" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+					<img src="img/insta2.png" alt="pagina de instagram" width="40px" height="40px"></a>
+					</li>
+					<li>
+					<a class="redes" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+					<img src="img/pinterest2.png" alt="pagina de pinterest" width="40px" height="40px"></a>
+					</li>
+					<li></li>
+					<a class="redes" href="https://twitter.com/home?lang=es" target="_blank">
+					<img src="img/twitter2.png" alt="pagina de twitter" width="40px" height="40px"></a>
+					</li>
+				</ul>
+			</nav>
+				  </div>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<section>
+		<div class="row">
+			<div class="col-12">
+				<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+				  <div class="carousel-indicators">
+				    <input type="Buscador de propiedades" class="buscador">
 	
-
-	<h1>AGREGUÉ UN TITULO</h1>
-	<h1>AGREGUÉ OTRO TITULO</h1>
-	<h1>AGREGUÉ OTRO TITULO2</h1>
-
-
-<div>DESAFIO 1 svsgfjkjafhñjhahñjdpohjdhjdjhñdhjñdgjhñdljhldjhldjghñdjhñdgjhñdjhñdjghkñdjhñkdsjhdñkhjsñhjskñjhñkkdjhsldjhlkjhlkdjhlkdjhksljlkhjslkhjklshsj </div>
-
+				    <a href="propiedades.html"class="buscador2">BUSCAR</a>
+				  </div>
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img src="img/render0.jpg" class="d-block w-100" alt="render">
+				    </div>
+				    <div class="carousel-item">
+				      <img src="img/render01.jpg" class="d-block w-100" alt="render1">
+				    </div>
+				    <div class="carousel-item">
+				      <img src="img/render02.jpg" class="d-block w-100" alt="render2">
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true" ></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
+				</div>
+			</div>
+	</section>
+	<section>
+		<div class="row">
+            <div class="col-12">
+				<h1 class="TituloDePaginahome" class="bordesredondeados">ALQUILERES Y VENTAS DESTACADAS </h1>
+		  	</div>
+        </div>	
+	</section>
+	<section class="home">
+		 <div class="row">
+                <div class="col-xl-4 col-md-8 col-sm-12 col-xs-12">
+                    <div class="card" class="mr-auto" style="width: 18rem;">
+                        <img src="img/departamento1.jpg" class="card-img-top" alt="departamento1">
+                        <div class="card-body">
+                          <h5 class="card-title">CASTRO BARROS 1140</h5>
+                          <p class="card-text">Departamento en alquiler en Boedo. <br> 2 ambientes / <strong>$19.000</strong> </p>
+                          <a href="propiedades.html" class="btn btn-primary">VER</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-xl-4 col-md-8 col-sm-12 col-xs-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/departamento2.jpg" class="card-img-top" alt="departamento2">
+                        <div class="card-body">
+                          <h5 class="card-title">AV. SAN JUAN 2300</h5>
+                          <p class="card-text">Departamento en alquiler en Boedo. <br> 2 ambientes / <strong>$22.000</strong> </p>
+                          <a href="propiedades.html" class="btn btn-primary">VER</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-xl-4 col-md-8 col-sm-12 col-xs-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/departamento3.jpg" class="card-img-top" alt="departamento3">
+                        <div class="card-body">
+                          <h5 class="card-title">AV. TRIUNVIRATO 3200</h5>
+                          <p class="card-text">Departamento en Villa Ortuzar. <br> 1 ambiente / <strong>$17.000</strong> </p>
+                          <a href="propiedades.html" class="btn btn-primary">VER</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+         <div class="row">
+                <div class="col-xl-4 col-md-8 col-sm-12 col-xs-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/departamento4.jpg" class="card-img-top" alt="departamento4">
+                        <div class="card-body">
+                          <h5 class="card-title">AV. SAN JUAN 2300</h5>
+                          <p class="card-text">Departamento en venta en Boedo. <br> 2 ambientes / <strong>USD 74.000</strong> </p>
+                          <a href="propiedades.html" class="btn btn-primary">VER</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-xl-4 col-md-8 col-sm-12 col-xs-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/departamento5.jpg" class="card-img-top" alt="departamento5">
+                        <div class="card-body">
+                          <h5 class="card-title">INDEPENDENCIA 1100</h5>
+                          <p class="card-text">Departamento en venta en Almagro. <br> 2 ambientes / <strong>USD 75.000</strong> </p>
+                          <a href="propiedades.html" class="btn btn-primary">VER</a>
+                        </div>
+                      </div>
+                </div>
+                <div class="col-xl-4 col-md-8 col-sm-12 col-xs-12">
+                    <div class="card" style="width: 18rem;">
+                        <img src="img/departamento6.jpg" class="card-img-top" alt="departamento6">
+                        <div class="card-body">
+                          <h5 class="card-title">MUÑIZ 1000</h5>
+                          <p class="card-text">Departamento en venta en Boedo. <br> 1 ambiente / <strong>USD 60.000</strong> </p>
+                          <a href="propiedades.html" class="btn btn-primary">VER</a>
+                        </div>
+                      </div>
+                </div>
+            </div>
+	</section>
+	<footer>
+		<div class="row">
+		<div class="col-12">
+		<section class="redessociales redessociales--1">
+			<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
+				<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
+				<p class="redessociales__texto">AGREGANOS</p>
+			</a>
+			<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
+				<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
+				<p class="redessociales__texto">SEGUINOS</p>
+			</a>
+			<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
+				<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
+				<p class="redessociales__texto">BUSCANOS</p>
+			</a>
+			<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
+				<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
+				<p class="redessociales__texto">ACOMPAÑANOS</p>
+			</a>
+		</section>
+		  </div>
+			</div>
+		<section>
+			<div class="row">
+				<div class="col-12">
+				<div class="card2 bg-dark text-white">
+				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
+				  <div class="card-img-overlay">
+				  	<h5 class="card-title">NUESTROS DATOS</h5>
+				    <p class="card-text">Dirección:</p>
+					<p class="card-text">Mail:</p>
+					<p class="card-text">Teléfono:</p>
+					<p class="card-text">Whatsapp:</p></p>
+				    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
+				  </div>
+			</div>
+		</section>
+			<div class="row">
+				<div class="col-12">
+					<div class="leyenda">
+					<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p>
+					</div>
+				</div>
+			</div>
+	</footer>
+	</div>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
-<footer>
-	<p>fin</p>
-</footer>
 </html>
