--- a/nosotros.html
+++ b/nosotros.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div class="col-12">
 				<nav class="navbar navbar-expand-lg navbar-light bg-light">
-				  <a class="navbar-brand" href="index.html"><img src="img/coas.png" alt="logo"></a>
+				  <a class="navbar-brand" href="index.html"><img src="img/coaslogo.png" alt="logo"></a>
 				  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
 				    <span class="navbar-toggler-icon"></span>
 				  </button>
