--- a/nosotros.html
+++ b/nosotros.html
@@ -10,6 +10,7 @@
    	content="PROPIEDADES, VENTA, ALQUILER, TASACIONES, INMOBILIARIA, COAS, BOEDO, CABALLITO, FLORES, NOSOTROS">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
@@ -71,80 +72,106 @@
 		
 		<h1 class="TituloDePagina" class="bordesredondeados">Nosotros </h1>	
 	</section>
-	<section class="fondo">
-	
-		<p class="iframe"><iframe width="560" height="315" src="https://www.youtube.com/embed/zigHn0lz38I" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+	<section>
+		<div class="row">
+			<div class="col-12">
+				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+				  <div class="carousel-inner">
+				    <div class="carousel-item active">
+				      <img class="d-block w-100" src="img/nosotros2.jpg" alt="First slide">
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="img/nosotros1.jpg" alt="Second slide">
+				    </div>
+				    <div class="carousel-item">
+				      <img class="d-block w-100" src="img/nosotros3.jpg" alt="Third slide">
+				    </div>
+				  </div>
+				  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+				    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Previous</span>
+				  </a>
+				  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+				    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+				    <span class="sr-only">Next</span>
+				  </a>
+				</div>
+			</div>
+		</div>
+	</section>
 
 		<div class="ParrafoPrincipal">
-		<div class="ParrafoPrincipal__texto1">
-		<p>Coas Propiedades remonta sus inicios al año 1967, el origen de su nombre deviene de la unión de empresas constructoras de gran prestigio de la época, creada desde sus inicios con la visión y convicción en ser una de las inmobiliarias lideres en el barrio se pensó por sobre todas las cosas y como premisas fundamentales, la seriedad,  el servicio y la confianza al cliente día a día, valores que en la actualidad son el eje fundamental de la inmobiliaria.
+			<div>
+				<p>Coas Propiedades remonta sus inicios al año 1967, el origen de su nombre deviene de la unión de empresas constructoras de gran prestigio de la época, creada desde sus inicios con la visión y convicción en ser una de las inmobiliarias lideres en el barrio se pensó por sobre todas las cosas y como premisas fundamentales, la seriedad,  el servicio y la confianza al cliente día a día, valores que en la actualidad son el eje fundamental de la inmobiliaria.
 
-		Con el correr de los años, mas precisamente en el año 1970, se afianzó en el barrio de Boedo límite con Caballito, sobre la Avenida San Juan y Muñiz, donde actualmente se encuentra nuestra oficina oficina, siendo desde ese momento una de las inmobiliarias con más prestigio y seriedad en el barrio.</p>
-		</div>
-		<div class="ParrafoPrincipal__texto2">
-			<p><strong>
-				Las 3 razones para elegirnos son: </strong></p>
-		</div>
-		<div class="ParrafoPrincipal__texto3" >
-				<ol>
+				Con el correr de los años, mas precisamente en el año 1970, se afianzó en el barrio de Boedo límite con Caballito, sobre la Avenida San Juan y Muñiz, donde actualmente se encuentra nuestra oficina oficina, siendo desde ese momento una de las inmobiliarias con más prestigio y seriedad en el barrio.</p>
+			</div>
+			<div>
+				<p><strong>
+					Las 3 razones para elegirnos son: </strong></p>
+			</div>
+			<div>
+					<ol>
 
-					<li class="ParrafoPrincipal__texto3--claro">Nuestros conocimientos en los negocios inmobiliarios y la continuidad ininterrumpida en la zona permitió con el correr de los años, que tanto clientes, vecinos y también colegas, reconozcan a Coas Propiedades como una inmobiliaria de prestigio y seriedad.</li>
+						<li class="servicios">Nuestros conocimientos en los negocios inmobiliarios y la continuidad ininterrumpida en la zona permitió con el correr de los años, que tanto clientes, vecinos y también colegas, reconozcan a Coas Propiedades como una inmobiliaria de prestigio y seriedad.</li>
 
-					<li class="ParrafoPrincipal__texto3--claro">Nuestro sistema de trabajo se basa en el asesoramiento personalizado, ya sea para la compra, venta o alquiler de inmuebles, dicho asesoramiento no acaba con la concreción de la operación, sino también incluye un acompañamiento en todo el proceso (boleto, escritura, contrato de alquiler, etc,).</li>
+						<li class="servicios">Nuestro sistema de trabajo se basa en el asesoramiento personalizado, ya sea para la compra, venta o alquiler de inmuebles, dicho asesoramiento no acaba con la concreción de la operación, sino también incluye un acompañamiento en todo el proceso (boleto, escritura, contrato de alquiler, etc,).</li>
 
-					<li class="ParrafoPrincipal__texto3--claro">Con la experiencia y trayectoria del personal especializado y a la vez con personal joven y dinámico contamos con todas las herramientas y conocimientos  del mercado actual, con mas de 40 años Coas Propiedades, brinda el mejor servicio para poder cumplir con el deseo del cliente..</li>
-				</ol>
+						<li class="servicios">Con la experiencia y trayectoria del personal especializado y a la vez con personal joven y dinámico contamos con todas las herramientas y conocimientos  del mercado actual, con mas de 40 años Coas Propiedades, brinda el mejor servicio para poder cumplir con el deseo del cliente..</li>
+					</ol>
+			</div>
+				<p><strong>
+					Socios: </strong></p>
+			</div>
 		</div>
-		</div>
-	</section>
-	<section>
-		<p class="ParrafoPrincipal"><strong>Por todo esto y mucho más, Coas Propiedades, es desde hace más de 40 años ``creador de sueños´´ de muchas personas.</strong></p>
-	</section>
+		<section id="socios">
+			<img src="img/persona1.png" alt="socio1">
+			<img src="img/persona2.png" alt="socio2">
+			<img src="img/persona3.png" alt="socio3">
+		</section>
 	<footer>
 		<div class="row">
 			<div class="col-12">
 				<section class="redessociales redessociales--1">
 					<a class="redessociales redessociales--1" href="https://www.facebook.com/Inmobiliaria-Coas-317115818299357" target="_blank">
 						<img src="img/fb.png" alt="pagina de fb" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">AGREGANOS</p>
 					</a>
 					<a class="redessociales redessociales--1" href="https://www.instagram.com/coasprop/?hl=es-la" target="_blank">
 						<img src="img/insta.png" alt="pagina de instagram" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">SEGUINOS</p>
 					</a>
 					<a class="redessociales redessociales--1" href="https://ar.pinterest.com/clari_buendi92/boards/" target="_blank">
 						<img src="img/pinterest.png" alt="pagina de pinterest" width="70%" height="70%" class="redessociales__imagen">
-						<p class="redessociales__texto">BUSCANOS</p>
 					</a>
 					<a class="redessociales redessociales--1" href="https://twitter.com/home?lang=es" target="_blank">
 						<img src="img/twitter.png" alt="pagina de twitter" width="80%" height="80%" class="redessociales__imagen">
-						<p class="redessociales__texto">ACOMPAÑANOS</p>
 					</a>
 				</section>
-				  </div>
-					</div>
-				<section>
-					<div class="row">
-						<div class="col-12">
-						<div class="card2 bg-dark text-white">
-						  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
-						  <div class="card-img-overlay">
-						  	<h5 class="card-title">NUESTROS DATOS</h5>
-						    <p class="card-text">Dirección:</p>
-							<p class="card-text">Mail:</p>
-							<p class="card-text">Teléfono:</p>
-							<p class="card-text">Whatsapp:</p></p>
-						    <p class="card-text2"><strong> Desde 1967 en el barrio de Boedo, brindando el mejor y más amplio asesoramiento profesional inmobiliario</strong></p>
-						  </div>
-					</div>
-				</section>
-					<div class="row">
-						<div class="col-12">
-							<div class="leyenda">
-							<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p></div>
-					</div>
 			</div>
 		</div>
+		<section>
+			<div class="row">
+				<div class="col-12">
+				<div class="card2 bg-dark text-white">
+				  <img src="img/skylinetira.png" class="card-img" alt="skylinetira" height="180vh">
+				  <div class="card-img-overlay">
+				  	<h5 class="card-title">COAS PROPIEDADES</h5>
+				    <p class="card-text">Dirección:  &nbsp;&nbsp;Av. San Juan 930</p>
+					<p class="card-text">Mail: &nbsp;&nbsp;coas_prop@hotmail.com</p>
+					<p class="card-text">Teléfono:&nbsp;&nbsp;49236959</p>
+					<p class="card-text">Whatsapp:&nbsp;&nbsp;1151654385</p></p>
+				  </div>
+			</div>
+		</section>
+			<div class="row">
+				<div class="col-12">
+					<div class="leyenda">
+					<p class="leyenda__texto">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae optio, perferendis! Voluptas, repudiandae veniam ratione enim inventore ex, quam distinctio tenetur, odit laborum iusto, unde sunt reiciendis rem officiis sapiente, unde reiciendis.</p>
+					</div>
+				</div>
+			</div>
 	</footer>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
